<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mybuddy280_driver</name>
  <version>0.0.1</version>
  <description>Driver for myBuddy 280 two-arm manipulator based on pymycobot, credits to Elephant Robotics.</description>
  <maintainer email="berman@robonomics.network">Ivan Berman</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>mycobot_interfaces</depend>
  <depend>mybuddy280_interfaces</depend>

  <!-- Dependencies for unit tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
