<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mybuddy280_robonomics</name>
  <version>0.0.1</version>
  <description>Robonomics wrapper for myBuddy 280</description>
  <maintainer email="berman@robonomics.network">Ivan Berman</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>mybuddy280_driver</depend>
  <depend>mybuddy280_interfaces</depend>
  <depend>robonomics_ros2_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
